# spider

./: .gitignore  Cargo.toml  README.md  config.toml.example
.github/workflows/: release.yml
shoes/: Cargo.toml
shoes/src/: address.rs  client_proxy_chain.rs  client_proxy_selector.rs  lib.rs  socks_handler.rs  tls_server_handler.rs  tls_util.rs  trojan_handler.rs
shoes/src/config/: mod.rs  pem.rs  validate.rs
shoes/src/config/types/: client.rs  common.rs  groups.rs  mod.rs  rules.rs  selection.rs  server.rs  shadowsocks.rs  transport.rs
shoes/src/crypto/: crypto_connection.rs  crypto_handshake.rs  crypto_reader_writer.rs  crypto_tls_stream.rs
shoes/src/network/: async_stream.rs  copy_bidirectional.rs  copy_bidirectional_message.rs  mod.rs  port_forward_handler.rs  socket_util.rs  socks5_udp_relay.rs  stream_reader.rs  tls_client.rs  tls_server.rs  udp_message_stream.rs
shoes/src/network/tcp/: chain_builder.rs  proxy_connector.rs  proxy_connector_impl.rs  socket_connector.rs  socket_connector_impl.rs  tcp_client_handler_factory.rs  tcp_handler.rs  tcp_server.rs  tcp_server_handler_factory.rs
shoes/src/network/websocket/: websocket_handler.rs  websocket_stream.rs
shoes/src/protocols/: http.rs  mixed.rs  mod.rs  reality_client.rs  socks.rs  trojan.rs
shoes/src/protocols/reality/: reality_aead.rs  reality_auth.rs  reality_client_connection.rs  reality_reader_writer.rs  reality_server_connection.rs  reality_server_handler.rs  reality_tls13_messages.rs  reality_util.rs
shoes/src/protocols/shadowsocks/: blake3_key.rs  default_key.rs  shadowsocks_stream.rs  shadowsocks_tcp_handler.rs
shoes/src/protocols/vless/: vision_filter.rs  vision_stream.rs  vless_client_handler.rs  vless_message_stream.rs  vless_response_stream.rs  vless_server_handler.rs  vless_util.rs
shoes/src/protocols/vmess/: vmess_handler.rs  vmess_stream.rs
shoes/src/reality/: reality_server_handler.rs
shoes/src/routing/: udp_router.rs
shoes/src/shadowsocks/: shadowsocks_tcp_handler.rs
shoes/src/tcp/: socket_connector_impl.rs  tcp_client_handler_factory.rs  tcp_server.rs  tcp_server_handler_factory.rs
shoes/src/utils/: mod.rs  option.rs  proxy_swapper.rs  resolver.rs  slide_buffer.rs  tls.rs
shoes/src/vless/: vision_filter.rs
spider/: Cargo.toml
src/: main.rs
src/actors/: proxy.rs
src/core/: config.rs  coordinator.rs  epub.rs  error.rs  event.rs  mod.rs  model.rs
src/engine/: client.rs  context.rs  mod.rs  pipeline.rs  task.rs
src/interfaces/: mod.rs  policy.rs  site.rs
src/network/: browser.rs  client.rs  context.rs  middleware.rs  mod.rs  service.rs  session.rs
src/sites/: booktoki.rs  mod.rs
src/ui/: progress.rs
src/utils/: browser.rs  mod.rs  singbox.rs  subscription.rs
(+31 files in other folders)
